--- a/src/component/cover/index.scss
+++ b/src/component/cover/index.scss
@@ -1,5 +1,5 @@
 .cover {
-  .wedding-date {
+  > .wedding-date {
     margin-top: 2rem;
     font-size: 1.5rem;
     display: flex;
@@ -20,7 +20,7 @@
     margin-bottom: 1rem;
   }
 
-  .names {
+  > .names {
     margin-top: 0.5rem;
     margin-bottom: 0.8rem;
     display: flex;
@@ -40,4 +40,3 @@
     opacity: 0.7;
   }
 }
-
