--- a/src/component/cover/index.scss
+++ b/src/component/cover/index.scss
@@ -6,6 +6,7 @@
   text-align: center;
   padding: 4rem 1.5rem;
   min-height: 100vh;
+  min-height: 100dvh; 
   background-color: var(--light-bg-color, #fff);
   color: var(--dark-color);
 
