--- a/src/component/information/index.scss
+++ b/src/component/information/index.scss
@@ -7,17 +7,26 @@
     position: relative;
     border: 1px solid var(--alt-color);
     border-radius: 0.5rem;
+
     .label {
       position: absolute;
       left: 50%;
       top: -1rem;
       transform: translateX(-50%);
-      padding: 0.5rem 2rem 0.5rem 2rem;
+      padding: 0.5rem 2rem;
       border-radius: 1rem;
       background-color: var(--alt-bg-color);
       border: 1px solid var(--alt-color);
+
+      /* ✅ 추가 (핵심 수정) */
+      display: inline-block;      /* 글자 길이에 맞게 라벨 폭 자동 조정 */
+      width: fit-content;         /* 내용에 맞게 가로폭 계산 */
+      white-space: nowrap;        /* 줄바꿈 방지 */
+      max-width: 100%;            /* 모바일 대응 (넘침 방지) */
+      text-align: center;         /* 가운데 정렬 */
     }
   }
+
   .content {
     line-height: 1.9;
     font-size: 0.9rem;
@@ -36,6 +45,7 @@
       border-bottom: 1px solid var(--dark-grey-color);
     }
   }
+
   .content {
     padding: 0 0.7rem 0.7rem 0.7rem;
 
@@ -46,12 +56,15 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
+
       .name {
         margin-bottom: 0.3rem;
+
         .relation {
           opacity: 0.7;
         }
       }
+
       .copy-button {
         font-size: 0.8rem;
         padding: 0.4rem 0.8rem;
@@ -96,12 +109,14 @@
           display: flex;
           flex-direction: column;
         }
+
         .select-input {
           display: flex;
           flex-direction: row;
 
           label {
             width: 100%;
+
             span {
               padding: 0.4rem;
               display: inline-block;
@@ -109,6 +124,7 @@
               width: 100%;
               background-color: var(--light-grey-color);
             }
+
             input {
               &:checked + span {
                 border: 2px solid var(--alt-color);
@@ -142,6 +158,7 @@
   .footer {
     display: flex;
     flex-direction: row;
+
     button {
       width: 100%;
     }
@@ -163,16 +180,19 @@
 
   .content {
     padding: 1.5rem 1rem 1.5rem 1rem;
+
     .info-message {
       text-align: center;
       line-height: 1.5rem;
       padding-bottom: 1.5rem;
       border-bottom: 1px dotted var(--dark-grey-color);
     }
+
     .wedding-info {
       padding-top: 1.5rem;
       padding-left: 2rem;
       line-height: 1.5rem;
+
       svg {
         width: 0.8rem;
         height: 0.8rem;
@@ -183,6 +203,7 @@
   .footer {
     display: flex;
     flex-direction: row;
+
     button {
       width: 100%;
     }
