--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
 :root {
   --theme-color: #ff8585;
   --theme-bg-color: #ffe7e7;
-  --alt-color: #c28080;
+  --alt-color: #d88a8a;
   --alt-bg-color: #f4f0f0;
   --dark-color: #282c34;
   --dark-grey-color: #d2d2d2;
